# mindvision_python_app

./: .gitignore  GEMINI.md  README.md  camera_settings.json  dump_tag.py  fix_ui.py  inspect_module.py  main.py  mainwindow.py  mainwindow.ui  matching_worker.py  pyproject.toml  stage_settings.json
native/: Makefile
native/mindvision_qobject/: Makefile  Makefile.camera_gui  Makefile.mindvision_lib  Makefile.mindvision_py  README.md  build_msvc.bat  camera_gui.pro  mindvision_lib.pro  mindvision_py.pro  mindvision_qobject.pro
native/mindvision_qobject/Include/: CameraApiLoad.h
native/mindvision_qobject/release/: MindVisionCamera.moc  camera_gui  lib_mindvision_qobject_py.so.1.0.0  libmindvision_qobject.so.1.0  libmindvision_qobject.so.1.0.0  moc_MindVisionCamera.cpp  (+2 more)
native/serial_qobject/: serial_py.pro  serial_qobject.pro  serial_test_app.pro
scripts/: build_virtual_mosaic.py  test_optimizer.py  view_bigtiff.py
src/mindvision_python_app/: CNCControlPanel.ui  ColorPickerWidget.ui  IntensityChart.ui  MosaicPanel.ui  ScanStatusDialog.ui  __init__.py  bindings.py  camera_gui.py  camera_settings.json  camera_settings_tabs.ui  cnc_control_panel.py  cnc_control_panel.ui  color_picker_widget.py  hardware_tabs.ui  intensity_chart.py  led_controller.py  main.py  mainwindow.py  mainwindow.ui  mainwindow_widget.ui  matching_worker.py  mosaic_window.py  range_slider.py  right_tab_widget.ui  scan_config_dialog.py  scan_config_panel.py  scan_status_dialog.py  serial_worker.py  test_cnc_panel.py  test_mindvision.py  test_serial.py  test_serial_robustness.py  utils.py
(+16 files in other folders)
